--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/Fundacion Aprender/css/styles.css">
 </head>
 <body>
+
 <header>
   <h1>Fundación Aprender</h1>
   <p>Tiendita Down – Inclusión y Amor</p>
@@ -19,6 +20,7 @@
 
 <!-- ===== CATÁLOGO ===== -->
 <section id="catalogo" class="active">
+
   <div class="filters">
     <button onclick="filterCat('all')">Todos</button>
     <button onclick="filterCat('velas')">Velas</button>
@@ -30,7 +32,74 @@
     <button onclick="filterCat('aretes')">Aretes</button>
     <button onclick="filterCat('pulseras')">Pulseras</button>
   </div>
-  <div class="catalogo" id="catalogoGrid"></div>
+
+  <div class="catalogo" id="catalogoGrid">
+
+    <!-- VELAS -->
+    <article class="product-card" data-cat="velas">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.16 PM.jpeg">
+      <h4>Vela Artesanal</h4>
+      <p class="price">$8.000</p>
+      <button onclick="addProduct('Vela Artesanal','velas',8000)">Agregar</button>
+    </article>
+
+    <!-- BISUTERIA -->
+    <article class="product-card" data-cat="bisuteria">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.07 PM.jpeg">
+      <h4>Bisutería</h4>
+      <p class="price">$5.000</p>
+      <button onclick="addProduct('Bisutería','bisuteria',5000)">Agregar</button>
+    </article>
+
+    <!-- MADERAS -->
+    <article class="product-card" data-cat="maderas">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.08 PM.jpeg">
+      <h4>Artesanía en Madera</h4>
+      <p class="price">$12.000</p>
+      <button onclick="addProduct('Artesanía en Madera','maderas',12000)">Agregar</button>
+    </article>
+
+    <!-- CUADROS -->
+    <article class="product-card" data-cat="cuadros">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.09 PM.jpeg">
+      <h4>Cuadro Decorativo</h4>
+      <p class="price">$20.000</p>
+      <button onclick="addProduct('Cuadro Decorativo','cuadros',20000)">Agregar</button>
+    </article>
+
+    <!-- PERFUMES -->
+    <article class="product-card" data-cat="perfumes">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.13 PM.jpeg">
+      <h4>Perfume Artesanal</h4>
+      <p class="price">$15.000</p>
+      <button onclick="addProduct('Perfume Artesanal','perfumes',15000)">Agregar</button>
+    </article>
+
+    <!-- COLLARES -->
+    <article class="product-card" data-cat="collares">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.14 PM.jpeg">
+      <h4>Collar</h4>
+      <p class="price">$6.000</p>
+      <button onclick="addProduct('Collar','collares',6000)">Agregar</button>
+    </article>
+
+    <!-- ARETES -->
+    <article class="product-card" data-cat="aretes">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.15 PM.jpeg">
+      <h4>Aretes</h4>
+      <p class="price">$4.000</p>
+      <button onclick="addProduct('Aretes','aretes',4000)">Agregar</button>
+    </article>
+
+    <!-- PULSERAS -->
+    <article class="product-card" data-cat="pulseras">
+      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.16 PM.jpeg">
+      <h4>Pulsera</h4>
+      <p class="price">$5.000</p>
+      <button onclick="addProduct('Pulsera','pulseras',5000)">Agregar</button>
+    </article>
+
+  </div>
 </section>
 
 <!-- ===== INVENTARIO ===== -->
@@ -39,7 +108,14 @@
   <button class="success" onclick="exportExcel()">Exportar ventas del día</button>
   <table id="tablaVentas">
     <thead>
-      <tr><th>Producto</th><th>Categoría</th><th>Cantidad</th><th>Precio</th><th>Total</th><th>Acción</th></tr>
+      <tr>
+        <th>Producto</th>
+        <th>Categoría</th>
+        <th>Cantidad</th>
+        <th>Precio</th>
+        <th>Total</th>
+        <th>Acción</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
@@ -48,34 +124,21 @@
 <!-- ===== QR ===== -->
 <section id="qr">
   <div class="qr-container">
+
     <div class="qr-card" onclick="this.classList.toggle('flipped')">
       <div class="qr-inner">
         <div class="qr-face">
           <h2>Fundación Aprender</h2>
-          <h4>Tiendita Down</h4>
-          <p>Cada compra y donación apoya sueños, inclusión y oportunidades.</p>
-          <p><strong>Toca para donar</strong></p>
+          <p>Tiendita Down</p>
+          <p>Dona con Nequi</p>
         </div>
         <div class="qr-face qr-back">
-          <img src="assets/qr-nequi.png" alt="QR Nequi">
-          <p>Gracias por apoyar</p>
+          <img src="/Fundacion Aprender/assets/QR Nequi/unnamed.png">
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<!-- ===== MODAL VELAS ===== -->
-<div class="modal" id="velaModal">
-  <div class="modal-content">
-    <h3>Personaliza tu vela</h3>
-    <p>Selecciona envase</p>
-    <div class="options" id="envases"></div>
-    <p>Selecciona esencia</p>
-    <div class="options" id="esencias"></div>
-    <button class="success" onclick="addVela()">Agregar venta</button>
-  </div>
-</div>
 
 <script src="/Fundacion Aprender/js/index.js"></script>
 </body>
