--- a/index.html
+++ b/index.html
@@ -13,99 +13,43 @@
 </header>
 
 <nav>
-  <button class="active" onclick="showSection('catalogo')">Catálogo</button>
-  <button onclick="showSection('inventario')">Inventario</button>
-  <button onclick="showSection('qr')">QR Donaciones</button>
+  <button class="active" onclick="showSection('catalogo',this)">Catálogo</button>
+  <button onclick="showSection('inventario',this)">Inventario</button>
+  <button onclick="showSection('qr',this)">QR Donaciones</button>
 </nav>
 
-<!-- ===== CATÁLOGO ===== -->
+<!-- ================= CATÁLOGO ================= -->
 <section id="catalogo" class="active">
 
   <div class="filters">
     <button onclick="filterCat('all')">Todos</button>
     <button onclick="filterCat('velas')">Velas</button>
-    <button onclick="filterCat('bisuteria')">Bisutería</button>
+    <button onclick="filterCat('pulseras')">Pulseras</button>
     <button onclick="filterCat('maderas')">Maderas</button>
     <button onclick="filterCat('cuadros')">Cuadros</button>
     <button onclick="filterCat('perfumes')">Perfumes</button>
     <button onclick="filterCat('collares')">Collares</button>
     <button onclick="filterCat('aretes')">Aretes</button>
-    <button onclick="filterCat('pulseras')">Pulseras</button>
   </div>
 
-  <div class="catalogo" id="catalogoGrid">
+  <!-- El JS renderiza aquí todos los productos -->
+  <div class="catalogo" id="catalogoGrid"></div>
 
-    <!-- VELAS -->
-    <article class="product-card" data-cat="velas">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.16 PM.jpeg">
-      <h4>Vela Artesanal</h4>
-      <p class="price">$8.000</p>
-      <button onclick="addProduct('Vela Artesanal','velas',8000)">Agregar</button>
-    </article>
-
-    <!-- BISUTERIA -->
-    <article class="product-card" data-cat="bisuteria">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.07 PM.jpeg">
-      <h4>Bisutería</h4>
-      <p class="price">$5.000</p>
-      <button onclick="addProduct('Bisutería','bisuteria',5000)">Agregar</button>
-    </article>
-
-    <!-- MADERAS -->
-    <article class="product-card" data-cat="maderas">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.08 PM.jpeg">
-      <h4>Artesanía en Madera</h4>
-      <p class="price">$12.000</p>
-      <button onclick="addProduct('Artesanía en Madera','maderas',12000)">Agregar</button>
-    </article>
-
-    <!-- CUADROS -->
-    <article class="product-card" data-cat="cuadros">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.09 PM.jpeg">
-      <h4>Cuadro Decorativo</h4>
-      <p class="price">$20.000</p>
-      <button onclick="addProduct('Cuadro Decorativo','cuadros',20000)">Agregar</button>
-    </article>
-
-    <!-- PERFUMES -->
-    <article class="product-card" data-cat="perfumes">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.13 PM.jpeg">
-      <h4>Perfume Artesanal</h4>
-      <p class="price">$15.000</p>
-      <button onclick="addProduct('Perfume Artesanal','perfumes',15000)">Agregar</button>
-    </article>
-
-    <!-- COLLARES -->
-    <article class="product-card" data-cat="collares">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.14 PM.jpeg">
-      <h4>Collar</h4>
-      <p class="price">$6.000</p>
-      <button onclick="addProduct('Collar','collares',6000)">Agregar</button>
-    </article>
-
-    <!-- ARETES -->
-    <article class="product-card" data-cat="aretes">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.15 PM.jpeg">
-      <h4>Aretes</h4>
-      <p class="price">$4.000</p>
-      <button onclick="addProduct('Aretes','aretes',4000)">Agregar</button>
-    </article>
-
-    <!-- PULSERAS -->
-    <article class="product-card" data-cat="pulseras">
-      <img src="/Fundacion Aprender/assets/WhatsApp Image 2025-12-17 at 9.17.16 PM.jpeg">
-      <h4>Pulsera</h4>
-      <p class="price">$5.000</p>
-      <button onclick="addProduct('Pulsera','pulseras',5000)">Agregar</button>
-    </article>
-
+  <!-- ===== MÉTODO DE PAGO ===== -->
+  <div class="filters">
+    <strong>Método de pago:</strong>
+    <button onclick="seleccionarPago('efectivo')">Efectivo</button>
+    <button onclick="seleccionarPago('nequi')">Nequi</button>
   </div>
+
 </section>
 
-<!-- ===== INVENTARIO ===== -->
+<!-- ================= INVENTARIO ================= -->
 <section id="inventario">
   <h2>Inventario de Ventas</h2>
+
   <button class="success" onclick="exportExcel()">Exportar ventas del día</button>
+
   <table id="tablaVentas">
     <thead>
       <tr>
@@ -114,6 +58,8 @@
         <th>Cantidad</th>
         <th>Precio</th>
         <th>Total</th>
+        <th>Pago</th>
+        <th>Fecha</th>
         <th>Acción</th>
       </tr>
     </thead>
@@ -121,7 +67,7 @@
   </table>
 </section>
 
-<!-- ===== QR ===== -->
+<!-- ================= QR DONACIONES ================= -->
 <section id="qr">
   <div class="qr-container">
 
@@ -130,15 +76,31 @@
         <div class="qr-face">
           <h2>Fundación Aprender</h2>
           <p>Tiendita Down</p>
-          <p>Dona con Nequi</p>
+          <p>Apoya con tu donación</p>
         </div>
         <div class="qr-face qr-back">
-          <img src="/Fundacion Aprender/assets/QR Nequi/unnamed.png">
+          <img src="/Fundacion Aprender/assets/QR Nequi/unnamed.png" alt="QR Nequi">
         </div>
       </div>
     </div>
+
   </div>
 </section>
+
+<!-- ================= MODAL VELAS ================= -->
+<div class="modal" id="velaModal">
+  <div class="modal-content">
+    <h3>Personaliza tu vela</h3>
+
+    <p><strong>Selecciona envase</strong></p>
+    <div class="options" id="envases"></div>
+
+    <p><strong>Selecciona esencia</strong></p>
+    <div class="options" id="esencias"></div>
+
+    <button class="success" onclick="addVela()">Agregar venta</button>
+  </div>
+</div>
 
 <script src="/Fundacion Aprender/js/index.js"></script>
 </body>
