Enhance QR donation card with improved styling and updated text for better user engagement

--- a/index.html
+++ b/index.html
@@ -73,19 +73,33 @@
 
     <div class="qr-card" onclick="this.classList.toggle('flipped')">
       <div class="qr-inner">
+
+        <!-- ===== CARA FRONTAL ===== -->
         <div class="qr-face">
           <h2>Fundación Aprender</h2>
           <p>Tiendita Down</p>
-          <p>Apoya con tu donación</p>
+          <p>Tu apoyo transforma vidas</p>
+
+          <div class="cta">
+            Toca para donar
+          </div>
         </div>
+
+        <!-- ===== CARA POSTERIOR ===== -->
         <div class="qr-face qr-back">
-          <img src="/Fundacion Aprender/assets/QR Nequi/unnamed.png" alt="QR Nequi">
+          <img 
+            src="/Fundacion Aprender/assets/QR Nequi/unnamed.png" 
+            alt="Código QR Nequi"
+          >
+          <span>Gracias por apoyar 💚</span>
         </div>
+
       </div>
     </div>
 
   </div>
 </section>
+
 
 <!-- ================= MODAL VELAS ================= -->
 <div class="modal" id="velaModal">
